syntax = "proto3";

package io.bluetape4k.redis.messages;

option java_generic_services = true;
option java_outer_classname = "MessageProtos";
option java_multiple_files = true;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message NestedMessage {
    int64 id = 1;
    string name = 2;
    DayOfTheWeek day_of_the_week = 3;
    optional SimpleMessage optionalMessage = 4;
    repeated SimpleMessage nestedMessages = 5;
}

message SimpleMessage {
    int64 id = 1;
    string name = 2;
    optional string description = 3;
    optional google.protobuf.Timestamp timestamp = 4;
}

enum DayOfTheWeek {
    UNKNOWN = 0;
    MONDAY = 1;
    TUESDAY = 2;
    WEDNESDAY = 3;
    THURSDAY = 4;
    FRIDAY = 5;
    SATURDAY = 6;
    SUNDAY = 7;
}
